--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3",
-    "openai": "^6.17.0"
+    "dotenv": "^17.2.3"
   }
 }
