--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@napi-rs/canvas": "^0.1.94",
     "discord.js": "^14.25.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "mongodb": "^7.1.0",
+    "mongoose": "^9.2.1"
   }
 }
